--- a/src/app/modules/profile/profile/template.html
+++ b/src/app/modules/profile/profile/template.html
@@ -1,5 +1,5 @@
 <div class="main-content">
-  <div class="page-container" data-ng-if="profile.user.isAdmin">
+  <div class="page-container">
     <h2 class="page-title">My profile</h2>
   </div>
 </div>
