--- a/src/assets/sass/base/_variables.sass
+++ b/src/assets/sass/base/_variables.sass
@@ -1,7 +1,10 @@
 $bg-background: #ececed
 $text-color: #636466
 $page-title: #3d2247
-$main-header-bg: #cacdd4
+//	$main-header-bg: #cacdd4
+
+$main-header-bg: #4b77bc
+
 $header-drop-color: #1c7796
 $forgot-a: #595e6f
 $login-register-a: #f56e4e
