--- a/src/assets/sass/pages/landing/landing.sass
+++ b/src/assets/sass/pages/landing/landing.sass
@@ -5,7 +5,7 @@ object
   pointer-events: none
 
 .page-slider
-  background-image: url('images/slides/slide1.jpg')
+  background-image: url('images/slide1.jpg')
   background-size: cover
   background-position: 50%
   position: absolute
@@ -67,6 +67,9 @@ object
 
 .slide-text
   margin: auto
+
+.header__logo
+  margin-left: 160px
 
 @media screen and (max-height: 550px)
   .page-slider
