--- a/src/app/modules/landing/landing/template.html
+++ b/src/app/modules/landing/landing/template.html
@@ -3,7 +3,8 @@
     <div class="slide">
       <div class="slide-text">
         <p class="title">JS tracker is the easy way<br />to make your website better.</p>
-        <a href="" class="button button_orange button_light">Watch the video</a>
+        <!-- <a href="" class="button button_orange button_light">Watch the video</a> -->
+        <a ui-sref="blank.login" class="button button_orange button_light">Sign in</a>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       </div>
     </div>
