--- a/src/app/modules/layout/headers/blank/template.html
+++ b/src/app/modules/layout/headers/blank/template.html
@@ -1,12 +1,8 @@
 <div class="full-w-header full-w-block">
   <div class="header-container ">
     <a ui-sref="blank.landing" class="header__logo">
-      <object data="assets/images/logo.svg" type="image/svg+xml">
-        <span>Your browser doesn't support SVG images</span>
-      </object>
+      <img src="assets/images/logo.png" alt="">
     </a>
-    <div class="header__registration">
-      <a data-ng-if="blankHeader.state.isSignInShown" ui-sref="blank.login" class="sign-in button button_blue">Sign in</a>
-    </div>
+
   </div>
 </div>
