added test data

--- a/src/app/modules/dashboard/common/template.html
+++ b/src/app/modules/dashboard/common/template.html
@@ -20,11 +20,11 @@
       <div class="row">
         <div class="col col50 col-block">
           <div class="col-block_head">Critical errors</div>
-          <div class="col-block_body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur libero natus saepe consectetur quia quo aspernatur! Expedita quia corporis, temporibus autem et nobis omnis dolore molestias officiis eligendi atque soluta.</div>
+          <div class="col-block_body">There is no critical errors at the moment.</div>
         </div>
         <div class="col col50 col-block">
           <div class="col-block_head">Recomendations</div>
-          <div class="col-block_body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos consequatur quam optio possimus beatae nisi quidem dolor, autem voluptatem commodi sed qui id cumque. Consequatur incidunt, tempore fugiat! Explicabo, molestiae! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo architecto, suscipit dolorum repellendus beatae distinctio obcaecati iste alias qui iusto maiores illum ipsam earum aliquid, amet consectetur voluptas adipisci et.</div>
+          <div class="col-block_body">There is no reccomendations at the moment.</div>
         </div>
       </div>
     </div>
