Added installation, settings, filled tables

--- a/src/app/modules/dashboard/common/template.html
+++ b/src/app/modules/dashboard/common/template.html
@@ -6,16 +6,17 @@
       <h1 class="page-title">Common</h1>
       <div class="stat-item">
         <div class="title">Views</div>
-        <div class="value">3</div>
+        <div class="value">4758</div>
       </div>
       <div class="stat-item">
         <div class="title">Errors</div>
-        <div class="value">2</div>
+        <div class="value">320</div>
       </div>
     </div>
     <div class="main-block">
       <div>
-        <img src="assets/images/chart.jpg" alt="">
+        <!-- <img src="assets/images/chart.jpg" alt=""> -->
+        <canvas class="chart chart-line" chart-data="common.data" chart-labels="common.labels" chart-series="common.series" chart-click="common.onClick"></canvas>
       </div>
       <div class="row">
         <div class="col col50 col-block">
