--- a/src/app/modules/layout/headers/main/template.html
+++ b/src/app/modules/layout/headers/main/template.html
@@ -15,7 +15,14 @@
           <a data-ui-sref="root.profile">
             <div class="profile-logo"></div>
             <span>Profile</span>
-          </a></li>
+          </a>
+        </li>
+        <li class="menu-icon">
+          <a data-ui-sref="root.installation">
+            <div class="install"></div>
+            <span>Installation</span>
+          </a>
+        </li>
         <li class="menu-icon">
           <a data-ng-click="mainHeader.logout()">
             <div class="sign-out"></div>
