--- a/src/assets/sass/layout/_sidebar.sass
+++ b/src/assets/sass/layout/_sidebar.sass
@@ -82,7 +82,9 @@
       &.profile
         background-image: url("images/menu-icons/admin-icon.svg")
       &.profile-logo
-        background-image: url("images/menu-icons/profile-logo.svg")
+        background-image: url("images/menu-icons/admin-icon.svg")
+      &.install
+        background-image: url("images/menu-icons/upload.svg")
       &.sign-out
         background-image: url("images/menu-icons/logout_icon.svg")
       &.events
