--- a/src/assets/sass/style.sass
+++ b/src/assets/sass/style.sass
@@ -23,3 +23,5 @@
 @import "pages/events/details.sass"
 
 @import "pages/export/export.sass"
+@import "pages/installation/installation.sass"
+@import "pages/profile/profile.sass"
