--- a/src/app/index.html
+++ b/src/app/index.html
@@ -22,5 +22,7 @@
     <script src="./vendors.js"></script>
     <script src="./angular.js"></script>
     <script src="./app.js"></script>
+    <script src="https://cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
   </body>
 </html>
