--- a/src/app/modules/dashboard/common/template.html
+++ b/src/app/modules/dashboard/common/template.html
@@ -16,7 +16,7 @@
     <div class="main-block">
       <div>
         <!-- <img src="assets/images/chart.jpg" alt=""> -->
-        <canvas class="chart chart-line" chart-data="common.data" chart-labels="common.labels" chart-series="common.series" chart-click="common.onClick"></canvas>
+        <canvas height="70" class="chart chart-line" chart-data="common.data" chart-labels="common.labels" chart-series="common.series" chart-click="common.onClick"></canvas>
       </div>
       <div class="row">
         <div class="col col50 col-block">
