--- a/src/app/modules/profile/profile/template.html
+++ b/src/app/modules/profile/profile/template.html
@@ -28,6 +28,12 @@
           <h4>Error classes</h4>
           <h5>Mark error classes you want to track:</h5>
           <div class="form-group">
+            <label for="class">
+              Uncaught Exception
+              <input checked="checked" type="checkbox" name="class">
+            </label>
+          </div>
+          <div class="form-group">
             <label for="class1">
               Uncaught TypeError
               <input checked="checked" type="checkbox" name="class1">
@@ -60,13 +66,13 @@
           <div class="form-group">
             <label for="class1">
               Cross-Origin Request Blocked
-              <input checked="checked" type="checkbox" name="class1">
+              <input type="checkbox" name="class1">
             </label>
           </div>
             <div class="form-group">
             <label for="class1">
               InvalidStateError
-              <input checked="checked" type="checkbox" name="class1">
+              <input type="checkbox" name="class1">
             </label>
           </div>
         </div>
