--- a/src/app/modules/dashboard/common/template.html
+++ b/src/app/modules/dashboard/common/template.html
@@ -21,11 +21,11 @@
       <div class="row">
         <div class="col col50 col-block">
           <div class="col-block_head">Critical errors</div>
-          <div class="col-block_body">There is no critical errors at the moment.</div>
+          <div class="col-block_body">There are no critical errors at the moment.</div>
         </div>
         <div class="col col50 col-block">
-          <div class="col-block_head">Recomendations</div>
-          <div class="col-block_body">There is no reccomendations at the moment.</div>
+          <div class="col-block_head">Recommendations</div>
+          <div class="col-block_body">There are no recommendations at the moment.</div>
         </div>
       </div>
     </div>
