--- a/src/app/modules/landing/landing/template.html
+++ b/src/app/modules/landing/landing/template.html
@@ -2,7 +2,7 @@
   <div class="slider-content">
     <div class="slide">
       <div class="slide-text">
-        <p class="title">JS tracker is the easy way<br />to make your website better.</p>
+        <p class="title">TrackerWeb - the easiest way<br />to make your website better.</p>
         <!-- <a href="" class="button button_orange button_light">Watch the video</a> -->
         <a ui-sref="blank.login" class="button button_orange button_light">Sign in</a>
       </div>
