--- a/src/app/modules/profile/profile/template.html
+++ b/src/app/modules/profile/profile/template.html
@@ -79,14 +79,14 @@
         <div class="settings-item">
           <h4>Pages exception</h4>
           <ul>
-            <li>There is no any exceptions.</li>
+            <li>There are no any exceptions.</li>
           </ul>
           <button class="button button-add"></button>
         </div>
         <div class="settings-item">
           <h4>Browsers exception</h4>
           <ul>
-            <li>There is no any exceptions.</li>
+            <li>There are no any exceptions.</li>
           </ul>
           <button class="button button-add"></button>
         </div>
