--- a/src/assets/sass/layout/_header.sass
+++ b/src/assets/sass/layout/_header.sass
@@ -71,7 +71,7 @@
   &-btn
     width: 68px
     height: 60px
-    background: url("images/menu-icons/admin-icon.svg") 40% 50% no-repeat
+    background: url("images/admin-icon.svg") 40% 50% no-repeat
     &:after
       content: ''
       position: absolute
