--- a/src/assets/sass/layout/_sidebar.sass
+++ b/src/assets/sass/layout/_sidebar.sass
@@ -86,7 +86,8 @@
       &.install
         background-image: url("images/menu-icons/upload.svg")
       &.sign-out
-        background-image: url("images/menu-icons/logout_icon.svg")
+        background-image: url("images/logout.png")
+
       &.events
         background-image: url("images/menu-icons/events_icon-gray.svg")
       &.categories
